tests/NormalTests/paczka1/small_fuzzy/73865082.err
Error in line 8: 06oYw A494 35,29
Error in line 12: ekpLcm3ScH A494 93,4
